# ie3ogres

./: .gitignore  INSTALL.md  Makefile  common.mk  main.lsf  meson.build
asm/: 3dspritefile.s  arm9_02028fa0.s  arm9_020453e0.s  arm9_0206f0b8.s  arm9_bss_02099e8c.s  arm9_data_0208f680.s  gamemain.s  itcm.s  izmain_0.s  logicthink.s  meson.build  middleware.s  recordmanager.s  resourcemanager.s  scenedirection.s  unitmanager.s  vram.s
asm/include/: 3ddevice.inc  3dspritefile.inc  arm9_0206f0b8.inc  arm9_data_0208f680.inc  gamemain.inc  itcm.inc  logicthink.inc  ov16_020ede60.inc  ov16_020f3f00.inc  ov16_020f6f8c.inc  ov16_graphics.inc  overlay0.inc  overlay1.inc  overlay100.inc  overlay101.inc  overlay102.inc  overlay103.inc  overlay104.inc  overlay105.inc  overlay107.inc  overlay108.inc  overlay109.inc  overlay110.inc  overlay111.inc  overlay112.inc  overlay113.inc  overlay114.inc  overlay115.inc  overlay118.inc  overlay119.inc  overlay120.inc  overlay121.inc  overlay122.inc  overlay123.inc  overlay124.inc  overlay125.inc  overlay126.inc  overlay131.inc  overlay132.inc  overlay15.inc  (+77 more)
asm/overlay0/: overlay0.s
asm/overlay1/: overlay1.s
asm/overlay100/: overlay100.s
asm/overlay101/: overlay101.s
asm/overlay102/: overlay102.s
asm/overlay103/: overlay103.s
asm/overlay104/: overlay104.s
asm/overlay105/: overlay105.s
asm/overlay107/: overlay107.s
asm/overlay108/: overlay108.s
asm/overlay109/: overlay109.s
asm/overlay110/: overlay110.s
asm/overlay111/: overlay111.s
asm/overlay112/: overlay112.s
asm/overlay113/: overlay113.s
asm/overlay114/: overlay114.s
asm/overlay115/: overlay115.s
asm/overlay118/: overlay118.s
asm/overlay119/: overlay119.s
asm/overlay120/: overlay120.s
asm/overlay121/: overlay121.s
asm/overlay122/: overlay122.s
asm/overlay123/: overlay123.s
asm/overlay124/: overlay124.s
asm/overlay125/: overlay125.s
asm/overlay126/: overlay126.s
asm/overlay131/: overlay131.s
asm/overlay132/: overlay132.s
asm/overlay15/: overlay15.s
asm/overlay16/: c3dplanectrl.s  c3dspritectrl.s  cbgmenumanager.s  cspranimectrl.s  csprbuttonctrl.s  csprdialog.s  ctexture.s  ov16_020ede60.s  ov16_020ef624.s  ov16_020f3f00.s  ov16_020f6f8c.s  ov16_graphics.s
asm/overlay18/: overlay18.s
asm/overlay19/: overlay19.s
asm/overlay20/: overlay20.s
asm/overlay21/: overlay21.s
asm/overlay22/: overlay22.s
asm/overlay23/: overlay23.s
asm/overlay26/: overlay26.s
asm/overlay28/: overlay28.s
asm/overlay29/: overlay29.s
asm/overlay31/: overlay31.s
asm/overlay32/: overlay32.s
asm/overlay33/: overlay33.s
asm/overlay34/: overlay34.s
asm/overlay35/: overlay35.s
asm/overlay36/: overlay36.s
asm/overlay37/: overlay37.s
asm/overlay38/: overlay38.s
asm/overlay39/: overlay39.s
asm/overlay4/: overlay4.s
asm/overlay40/: overlay40.s
asm/overlay41/: overlay41.s
asm/overlay42/: overlay42.s
asm/overlay43/: overlay43.s
asm/overlay44/: overlay44.s
asm/overlay45/: overlay45.s
asm/overlay46/: overlay46.s
asm/overlay47/: overlay47.s
asm/overlay49/: overlay49.s
asm/overlay50/: overlay50.s
asm/overlay51/: overlay51.s
asm/overlay52/: overlay52.s
asm/overlay53/: overlay53.s
asm/overlay54/: overlay54.s
asm/overlay55/: overlay55.s  phonepassword.s
asm/overlay56/: overlay56.s
asm/overlay57/: overlay57.s
asm/overlay59/: overlay59.s
asm/overlay60/: overlay60.s
asm/overlay61/: overlay61.s
asm/overlay62/: overlay62.s
asm/overlay63/: overlay63.s
asm/overlay64/: overlay64.s
asm/overlay65/: overlay65.s
asm/overlay67/: overlay67.s
asm/overlay68/: overlay68.s
asm/overlay69/: overlay69.s
asm/overlay70/: overlay70.s
asm/overlay71/: overlay71.s
asm/overlay72/: overlay72.s
asm/overlay73/: overlay73.s
asm/overlay74/: overlay74.s
asm/overlay75/: overlay75.s
asm/overlay76/: overlay76.s
asm/overlay79/: overlay79.s
asm/overlay80/: overlay80.s
asm/overlay81/: overlay81.s
asm/overlay82/: overlay82.s
asm/overlay83/: overlay83.s
asm/overlay84/: overlay84.s
asm/overlay85/: overlay85.s
asm/overlay86/: overlay86.s
asm/overlay87/: overlay87.s
asm/overlay88/: overlay88.s
asm/overlay89/: overlay89.s
asm/overlay90/: overlay90.s
asm/overlay91/: overlay91.s
asm/overlay92/: overlay92.s
asm/overlay94/: overlay94.s
asm/overlay95/: overlay95.s
asm/overlay96/: overlay96.s
asm/overlay97/: overlay97.s
asm/overlay98/: overlay98.s
asm/overlay99/: overlay99.s
files/data_iz/: meson.build
files/data_iz/bfmt/: meson.build
files/data_iz/effect3d/: meson.build
files/data_iz/face2d/: meson.build
files/data_iz/font/: meson.build
files/data_iz/logic/: meson.build
files/data_iz/map2d/: meson.build
files/data_iz/model/: meson.build
files/data_iz/model/char/: meson.build
files/data_iz/model/pac/: meson.build
files/data_iz/movie/: meson.build
files/data_iz/movie/txt/: meson.build
files/data_iz/obj2d/rpg/: meson.build
files/data_iz/pic2d/: meson.build
files/data_iz/pic2d/cmd/: meson.build
files/data_iz/pic2d/ending/: meson.build
files/data_iz/pic2d/field/: meson.build
files/data_iz/pic2d/menu/: meson.build
files/data_iz/pic2d/team/: meson.build
files/data_iz/pic3d/: meson.build
files/data_iz/script/: meson.build
files/data_iz/sound/: meson.build
files/data_iz/spr/: meson.build
lib/TwlDWC_dl/asm/: meson.build
lib/TwlSDK/asm/: meson.build
lib/TwlWiFi/asm/: meson.build
lib/libMobiclip/: Makefile  meson.build
lib/libMobiclip/asm/: YuvToArgb.s  vx2Code.s
lib/libMobiclip/src/: handle.cpp  libMobiclip.cpp  relocator.cpp  streamfile.cpp  streammemory.cpp
lib/libmsl/: meson.build
lib/libmsl/Mathlib/: readme.txt
lib/libmsl/asm/: libmsl.s
ogre.jp/: filesys.sha1  filesystem.csv  main.lcf.template  main.lsf  main.sha1  meson.build  rom.ini  rom.rsf  rom.sha1  rom_header_template.sbin  sbins.sha1
src/: C3DDevice.cpp  CBgMenuRadioButton.cpp  CFontManager.cpp  izmain.cpp  meson.build
src/cardscreen/: CMainCardScreenInit.cpp
src/mainmenuscreen/: CMainMenuScreenEnterName.cpp
tools/compstatic/: meson.build
tools/makelcf/: meson.build
(+456 files in other folders)
