ie3ogre_asm += files(
    'init/arm9_init_02086768.s',
    'init/arm9_init_02086aec.s',
    'init/arm9_init_02086b40.s',
    'init/arm9_init_02086be8.s',
    'init/arm9_init_02086c3c.s',
    'init/arm9_init_02086c8c.s',
    'init/arm9_init_02086ce0.s',
    'init/arm9_init_02086d34.s',
    'init/arm9_init_02086d88.s',
    'init/arm9_init_02086ddc.s',
    'init/arm9_init_02086e30.s',
    'init/arm9_init_02086e84.s',
    'init/arm9_init_02086ed8.s',
    'init/arm9_init_02086f2c.s',
    'init/arm9_init_02086f80.s',
    'init/arm9_init_02087028.s',
    'init/arm9_init_0208707c.s',
    'init/arm9_init_020870d0.s',
    'init/arm9_init_02087120.s',
    'init/arm9_init_020871c8.s',
    'init/arm9_init_02087218.s',
    'init/arm9_init_02087268.s',
    'init/arm9_init_020872bc.s',
    'init/arm9_init_02087310.s',
    'init/arm9_init_02087360.s',
    'init/arm9_init_020873b4.s',
    'init/arm9_init_02087408.s',
    'init/arm9_init_0208745c.s',
    'init/arm9_init_020874b0.s',
    'init/arm9_init_02087500.s',
    'init/arm9_init_02087554.s',
    'init/arm9_init_020875a8.s',
    'init/arm9_init_020875fc.s',
    'init/arm9_init_02087650.s',
    'init/arm9_init_020876a4.s',
    'init/arm9_init_020876f8.s',
    'init/arm9_init_020877a0.s',
    'overlay0/overlay0.s',
    'overlay1/overlay1.s',
    'overlay4/overlay4.s',
    'overlay15/overlay15.s',
    'overlay16/archive_sti.s',
    'overlay16/c3dplanectrl.s',
    'overlay16/c3dspritectrl.s',
    'overlay16/cbgmenumanager.s',
    'overlay16/cspranimectrl.s',
    'overlay16/csprbuttonctrl.s',
    'overlay16/csprdialog.s',
    'overlay16/ctexture.s',
    'overlay16/ov16_020ede60.s',
    'overlay16/ov16_020ef624.s',
    'overlay16/ov16_020efa04.s',
    'overlay16/ov16_020f2cf8.s',
    'overlay16/ov16_020f3f00.s',
    'overlay16/ov16_020f6f8c.s',
    'overlay16/ov16_graphics.s',
    'overlay16/ov16_rodata_021178a4.s',
    'overlay18/overlay18.s',
    'overlay19/overlay19.s',
    'overlay20/overlay20.s',
    'overlay21/overlay21.s',
    'overlay22/overlay22.s',
    'overlay23/overlay23.s',
    'overlay24/overlay24.s',
    'overlay25/overlay25.s',
    'overlay26/overlay26.s',
    'overlay27/overlay27.s',
    'overlay28/overlay28.s',
    'overlay29/overlay29.s',
    'overlay30/overlay30.s',
    'overlay31/overlay31.s',
    'overlay32/overlay32.s',
    'overlay33/overlay33.s',
    'overlay34/overlay34.s',
    'overlay35/overlay35.s',
    'overlay36/overlay36.s',
    'overlay37/overlay37.s',
    'overlay38/overlay38.s',
    'overlay39/overlay39.s',
    'overlay40/overlay40.s',
    'overlay41/overlay41.s',
    'overlay42/overlay42.s',
    'overlay43/overlay43.s',
    'overlay44/overlay44.s',
    'overlay45/overlay45.s',
    'overlay46/overlay46.s',
    'overlay47/overlay47.s',
    'overlay48/overlay48.s',
    'overlay49/overlay49.s',
    'overlay50/overlay50.s',
    'overlay51/overlay51.s',
    'overlay52/overlay52.s',
    'overlay53/overlay53.s',
    'overlay54/overlay54.s',
    'overlay55/phonepassword.s',
    'overlay56/overlay56.s',
    'overlay57/overlay57.s',
    'overlay58/overlay58.s',
    'overlay59/overlay59.s',
    'overlay60/overlay60.s',
    'overlay61/overlay61.s',
    'overlay62/overlay62.s',
    'overlay63/overlay63.s',
    'overlay64/overlay64.s',
    'overlay65/overlay65.s',
    'overlay66/overlay66.s',
    'overlay67/overlay67.s',
    'overlay68/overlay68.s',
    'overlay69/overlay69.s',
    'overlay70/overlay70.s',
    'overlay71/overlay71.s',
    'overlay72/overlay72.s',
    'overlay73/overlay73.s',
    'overlay74/overlay74.s',
    'overlay75/overlay75.s',
    'overlay76/overlay76.s',
    'overlay77/overlay77.s',
    'overlay79/overlay79.s',
    'overlay80/overlay80.s',
    'overlay81/overlay81.s',
    'overlay82/overlay82.s',
    'overlay83/overlay83.s',
    'overlay84/overlay84.s',
    'overlay85/overlay85.s',
    'overlay86/overlay86.s',
    'overlay87/overlay87.s',
    'overlay88/overlay88.s',
    'overlay89/overlay89.s',
    'overlay90/overlay90.s',
    'overlay91/overlay91.s',
    'overlay92/overlay92.s',
    'overlay93/overlay93.s',
    'overlay94/overlay94.s',
    'overlay95/overlay95.s',
    'overlay96/overlay96.s',
    'overlay97/overlay97.s',
    'overlay98/overlay98.s',
    'overlay99/overlay99.s',
    'overlay100/overlay100.s',
    'overlay101/overlay101.s',
    'overlay102/overlay102.s',
    'overlay103/overlay103.s',
    'overlay104/overlay104.s',
    'overlay105/overlay105.s',
    'overlay106/overlay106.s',
    'overlay107/overlay107.s',
    'overlay108/overlay108.s',
    'overlay109/overlay109.s',
    'overlay110/overlay110.s',
    'overlay111/overlay111.s',
    'overlay112/overlay112.s',
    'overlay113/overlay113.s',
    'overlay114/overlay114.s',
    'overlay115/overlay115.s',
    'overlay117/overlay117.s',
    'overlay118/overlay118.s',
    'overlay119/overlay119.s',
    'overlay120/overlay120.s',
    'overlay121/overlay121.s',
    'overlay122/overlay122.s',
    'overlay123/overlay123.s',
    'overlay124/overlay124.s',
    'overlay125/overlay125.s',
    'overlay126/overlay126.s',
    'overlay131/overlay131.s',
    'overlay132/overlay132.s',
    '2dadventurelogic.s',
    '2dgamechar.s',
    '3dgamebase.s',
    '3dgamechar.s',
    '3dgameeffect.s',
    '3dgamemap.s',
    '3dgamemapobject.s',
    '3dspritefile.s',
    'actor2d.s',
    'allocator.s',
    'arm9_02028fa0.s',
    'arm9_0203df80.s',
    'arm9_0203fb5c.s',
    'arm9_020453e0.s',
    'arm9_0205244c.s',
    'arm9_0205318c.s',
    'arm9_0206f0b8.s',
    'arm9_bss_02099e8c.s',
    'arm9_data_0208f680.s',
    'arm9_data_0208ff5c.s',
    'arm9_rodata_0208bfb0.s',
    'audioplayer_data.s',
    'calcmap.s',
    'cameracontroller.s',
    'commonmainscreen.s',
    'commonscreen.s',
    'commonsubscreen.s',
    'distancemap.s',
    'eventscreenmanager.s',
    'fontmanager.s',
    'fontmanager_2.s',
    'gamemain.s',
    'gamemodes_0.s',
    'gamemodes_1.s',
    'itcm.s',
    'izmain_0.s',
    'logicthink.s',
    'memcopy.s',
    'middleware.s',
    'ov116_data.s',
    'recordmanager.s',
    'resourcemanager.s',
    'scenedirection.s',
    'scenescriptdata.s',
    'scenescriptmanager.s',
    'thinkmanager.s',
    'thinkmanager_mini.s',
    'unitmanager.s',
    'vram.s',
    'wirelessutil.s'
)