ie3ogre_cpp += files(
    'nitromain.cpp',
    'izmain.cpp',
    'gamemodes.cpp',
    'audioplayer.cpp',
    'movieplayer.cpp',
    'CFileIO.cpp',
    'CConfig.cpp',
    'CScreenManager.cpp',
    'CFontManager.cpp',
    'script/CSceneScriptFileContext.cpp',
    'C3DDevice.cpp',
    'CCardCtrl.cpp',
    'thread.cpp',
    'filesystem.cpp',
    'cardscreen/CCardScreenManager.cpp',
    'cardscreen/CMainCardScreenInit.cpp',
    'logoscreen/CLogoScreenManager.cpp',
    'logoscreen/CMainLogoScreenDCBmp.cpp',
    'logoscreen/CMainLogoScreenInit.cpp',
    'logoscreen/CSubLogoScreenInit.cpp',
    'endrollscreen/CEndrollScreenManager.cpp',
    'endrollscreen/CMainEndrollScreenInit.cpp',
    'endrollscreen/CSubEndrollScreenInit.cpp',
    'random.cpp',
    'archive.cpp',
    'overlay.cpp',
    'CBgAnimeManager.cpp',
    'CBgMenuRadioButton.cpp',
    'mainmenuscreen/CMainMenuScreenEnterName.cpp',
    'ov101.cpp',
    'ov116.cpp',
    'ov130.cpp',
)