libmsl_asm = files(
    'asm/libmsl.s'
)

libmsl_includes = include_directories(
    'asm/include',
    'msl/MSL_C++/MSL_ARM/Include',
    'msl/MSL_C++/MSL_Common/Include',
    'msl/MSL_Extras/MSL_ARM/Include',
    'msl/MSL_Extras/MSL_Common/Include',
    'Profiler/include',
    'Runtime/Runtime_ARM/Runtime_NITRO/Common_Includes'
)

ie3ogre_asm += libmsl_asm
public_includes += libmsl_includes
