prebuilt_files = [
    'action.dat',
    'BattleRouteTitle.dat',
    'bgm_collection.bin',
    'BinderData_AREA.dat',
    'BinderData_O.dat',
    'calcbase.dat',
    'CapsuleComment.dat',
    'CapsulePoint.dat',
    'clbonus.dat',
    'ClearCondition.dat',
    'clubinfo.dat',
    'cmd_cond.dat',
    'command.dat',
    'command.STR',
    'command_price.dat',
    'd_bonus_exp.dat',
    'ed_option_f.dat',
    'fieldinf.dat',
    'fieldsel.dat',
    'fmt.pkb',
    'fmt.pkh',
    'fmtsm.dat',
    'gamerule.dat',
    'games.dat',
    'games.STR',
    'gloveinfo.dat',
    'gmap01_SPD.dat',
    'gmap02_SPD.dat',
    'gmap03_SPD.dat',
    'gmap04_SPD.dat',
    'gmap05_SPD.dat',
    'gmap06_SPD.dat',
    'gmap07_SPD.dat',
    'gmap08_SPD.dat',
    'gmap09_SPD.dat',
    'gmap10_SPD.dat',
    'gmap11_SPD.dat',
    'gmap12_SPD.dat',
    'gmap13_SPD.dat',
    'gmap14_SPD.dat',
    'gmap15_SPD.dat',
    'gmap16_SPD.dat',
    'gmap17_SPD.dat',
    'gmap18_SPD.dat',
    'gmap19_SPD.dat',
    'gmap20_SPD.dat',
    'gmap21_SPD.dat',
    'gmap22_SPD.dat',
    'gmap23_SPD.dat',
    'gmap24_SPD.dat',
    'gmap25_SPD.dat',
    'gmap_draw_info_01.dat',
    'gmap_draw_info_02.dat',
    'gmap_draw_info_03.dat',
    'gmap_draw_info_04.dat',
    'gmap_draw_info_05.dat',
    'gmap_draw_info_06.dat',
    'gmap_draw_info_07.dat',
    'gmap_draw_info_08.dat',
    'gmap_draw_info_09.dat',
    'gmap_draw_info_10.dat',
    'gmap_draw_info_11.dat',
    'gmap_draw_info_12.dat',
    'gmap_draw_info_13.dat',
    'gmap_draw_info_14.dat',
    'gmap_draw_info_15.dat',
    'gmap_draw_info_16.dat',
    'gmap_draw_info_17.dat',
    'gmap_draw_info_18.dat',
    'gmap_draw_info_19.dat',
    'gmap_draw_info_20.dat',
    'gmap_draw_info_21.dat',
    'gmap_draw_info_22.dat',
    'gmap_draw_info_23.dat',
    'gmap_draw_info_24.dat',
    'gmap_draw_info_25.dat',
    'gmap_load_info.dat',
    'HeadhuntData.dat',
    'HeadhuntList.dat',
    'item.dat',
    'item.STR',
    'itemsortlist.dat',
    'item_md.dat',
    'item_pw_adhoc.dat',
    'i_detail.dat',
    'i_limit.dat',
    'JinmyakuCursor.dat',
    'JinmyakuData.dat',
    'JinmyakuLV.dat',
    'JinmyakuTreasure.dat',
    'livetalk.dat',
    'lvup_command.dat',
    'lvup_exp.dat',
    'mapidx.dat',
    'missinfo.dat',
    'MLPass.bin',
    'movie_view_f.dat',
    'OpenCondition.dat',
    'palglove.dat',
    'palshoes.dat',
    'palskin2d.dat',
    'palskin3d.dat',
    'palskinface.dat',
    'phone_password.txt',
    'pintro.dat',
    'PracticeDataF.dat',
    'PracticeGame0F.dat',
    'PracticeGame1F.dat',
    'PracticeGame2F.dat',
    'PracticeGame3F.dat',
    'PracticeGame4F.dat',
    'PracticeGame5F.dat',
    'PracticeGame6F.dat',
    'PracticeGame7F.dat',
    'PracticeGame8F.dat',
    'PracticeGame9F.dat',
    'PracticeGameCursor.dat',
    'premiumcondition.dat',
    'premiumcondition_hurri.dat',
    'premium_item.dat',
    'premium_item_hurri.dat',
    'rpgtitle.dat',
    'rpgtitle.STR',
    'schinfo.dat',
    'ScoutData.dat',
    'ScoutSpCode.dat',
    'SetEndrollBG.dat',
    'SetRestPoint.dat',
    'shoesinfo.dat',
    'shootchain.dat',
    'shop.dat',
    'ShopName.dat',
    'sp_binder.dat',
    'sp_binder.STR',
    'status_up.dat',
    'SystemMenuOrder.dat',
    'tacticscmd.dat',
    'tacticscmd.STR',
    'team.pkb',
    'team.pkh',
    'teamtitle.dat',
    'teamtpmax.dat',
    'TokkunData.dat',
    'TournamentItem01.dat',
    'TournamentItem02.dat',
    'TournamentItem03.dat',
    'TournamentItem04.dat',
    'TournamentItem05.dat',
    'TournamentItem06.dat',
    'TournamentItem07.dat',
    'TournamentItem08.dat',
    'TournamentItem09.dat',
    'TournamentItem10.dat',
    'TournamentItem11.dat',
    'TournamentItem12.dat',
    'TournamentItem13.dat',
    'TournamentItem14.dat',
    'TournamentItem15.dat',
    'TournamentItem16.dat',
    'TournamentName01.dat',
    'TournamentName02.dat',
    'TournamentName03.dat',
    'TournamentName04.dat',
    'TournamentName05.dat',
    'TournamentName06.dat',
    'TournamentName07.dat',
    'TournamentName08.dat',
    'TournamentName09.dat',
    'TournamentName10.dat',
    'TournamentName11.dat',
    'TournamentName12.dat',
    'TournamentName13.dat',
    'TournamentName14.dat',
    'TournamentName15.dat',
    'TournamentName16.dat',
    'TournamentRank.dat',
    'TournamentRankPlus1.dat',
    'TournamentRankPlus2.dat',
    'TournamentRankPlus3.dat',
    'TournamentTeam01.dat',
    'TournamentTeam02.dat',
    'TournamentTeam03.dat',
    'TournamentTeam04.dat',
    'TournamentTeam05.dat',
    'TournamentTeam06.dat',
    'TournamentTeam07.dat',
    'TournamentTeam08.dat',
    'TournamentTeam09.dat',
    'TournamentTeam10.dat',
    'TournamentTeam11.dat',
    'TournamentTeam12.dat',
    'TournamentTeam13.dat',
    'TournamentTeam14.dat',
    'TournamentTeam15.dat',
    'TournamentTeam16.dat',
    'TradeData.dat',
    'unitbase.dat',
    'unitbase.STR',
    'unitbase_npc.dat',
    'unitcalc.dat',
    'unitchange.dat',
    'unitno.dat',
    'unitno_npc.dat',
    'unitstat.dat',
    'uschool.dat',
    'usearch.dat',
    'wearset.dat'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach