subdir('txt')

prebuilt_files = [
    'a3m02a.mods',
    'a3m03a.mods',
    'a3m03b.mods',
    'a3m04a.mods',
    'a3m05a.mods',
    'a3m05b.mods',
    'a3m05c.mods',
    'a3m05d.mods',
    'a3m05e.mods',
    'a3m05f.mods',
    'a3m06a.mods',
    'a3m07a.mods',
    'a3m08a.mods',
    'a3m09a.mods',
    'a3m10a.mods',
    'a3m11a.mods',
    'a3m11b.mods',
    'a3m12a.mods',
    'a3m13a.mods',
    'a3m14a.mods',
    'a3m15a.mods',
    'a3m16a.mods',
    'a3m17a.mods',
    'a3m18a.mods',
    'a3m19a.mods',
    'a3m20a.mods',
    'a3m21a.mods',
    'a3m22a.mods',
    'a3m23a.mods',
    'a3m24a.mods',
    'a3m25a.mods',
    'a3m26a.mods',
    'a3m27a.mods',
    'a3m28a.mods',
    'a3m29a.mods',
    'a3m30a.mods',
    'a3m31a.mods',
    'a3m32a.mods',
    'a3m33a.mods',
    'a3m34a.mods',
    'a3m35a.mods',
    'a3m36a.mods',
    'a3m37a.mods',
    'a3m38a.mods',
    'a3m39a.mods',
    'a3m40a.mods',
    'a3m41a.mods',
    'a3m42a.mods',
    'a3m43a.mods',
    'a3m45a.mods',
    'a3m46a.mods',
    'a3m81a.mods',
    'a3m82a.mods',
    'a3m83a.mods',
    'a3m84a.mods',
    'a3m85a.mods',
    'a3y01f.mods',
    'a3y02f.mods',
    'a3y03f.mods',
    'a3y04f.mods',
    'op00f.mods',
    'pv_o1.mods',
    'pv_o2.mods'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach