subdir('script')

prebuilt_files = [
    'binder.SPD',
    'binder.SPL',
    'blog_main.SPD',
    'blog_main.SPL',
    'capsule.SPD',
    'capsule.SPL',
    'captainselect.SPD',
    'captainselect.SPL',
    'cldnf001.pac_',
    'cldnf002.pac_',
    'cldnf003.pac_',
    'cldnf004.pac_',
    'cldnf005.pac_',
    'cldnf006.pac_',
    'cldnf007.pac_',
    'cldnf008.pac_',
    'cldnf009.pac_',
    'cldnf010.pac_',
    'cldnf011.pac_',
    'cldnf012.pac_',
    'cldnf013.pac_',
    'cldnf014.pac_',
    'cldnf015.pac_',
    'cldnf016.pac_',
    'cldnf017.pac_',
    'cldnf018.pac_',
    'cldnf019.pac_',
    'cldnf020.pac_',
    'cldnf021.pac_',
    'cldnf022.pac_',
    'cldnf023.pac_',
    'cldnf024.pac_',
    'cldnf025.pac_',
    'cldnf026.pac_',
    'cldnf027.pac_',
    'cldnf028.pac_',
    'cldnf029.pac_',
    'cldnf030.pac_',
    'cldnf031.pac_',
    'cldnf032.pac_',
    'cldnf033.pac_',
    'cldnf034.pac_',
    'cldnf035.pac_',
    'cldnf036.pac_',
    'cldnf037.pac_',
    'cldnf038.pac_',
    'cldnf039.pac_',
    'cldnf040.pac_',
    'cldnf101.pac_',
    'cldnf102.pac_',
    'cldnf103.pac_',
    'cldnf104.pac_',
    'cldnf105.pac_',
    'cldnf106.pac_',
    'cldnf107.pac_',
    'cldnf108.pac_',
    'cldnf109.pac_',
    'cldnf110.pac_',
    'cldnf111.pac_',
    'cldnf112.pac_',
    'cldnf113.pac_',
    'cldnf114.pac_',
    'cldnf115.pac_',
    'cldnf116.pac_',
    'cldnf117.pac_',
    'cldnf118.pac_',
    'cldnf119.pac_',
    'cldnf120.pac_',
    'cldnf121.pac_',
    'cldnf122.pac_',
    'cldnf123.pac_',
    'cldnf124.pac_',
    'cldnf125.pac_',
    'cldnf126.pac_',
    'cldnf127.pac_',
    'cldnf128.pac_',
    'cldnf129.pac_',
    'cldnf130.pac_',
    'cldnf201.pac_',
    'cldnf202.pac_',
    'cldnf203.pac_',
    'cldnf204.pac_',
    'cldnf205.pac_',
    'cldnf206.pac_',
    'cldnf207.pac_',
    'cldnf208.pac_',
    'cldnf209.pac_',
    'cldnf210.pac_',
    'cldnf211.pac_',
    'cldnf212.pac_',
    'cldnf213.pac_',
    'cldnf214.pac_',
    'cldnf215.pac_',
    'cldnf216.pac_',
    'cldnf217.pac_',
    'cldnf218.pac_',
    'cldnf219.pac_',
    'cldnf220.pac_',
    'cldnf221.pac_',
    'cldnf222.pac_',
    'cldnf223.pac_',
    'cldnf224.pac_',
    'cldnf225.pac_',
    'cldnf226.pac_',
    'cldnf227.pac_',
    'cldnf228.pac_',
    'cldnf229.pac_',
    'cldnf230.pac_',
    'cldnf301.pac_',
    'cldnf302.pac_',
    'cldnf303.pac_',
    'cldnf304.pac_',
    'cldnf305.pac_',
    'cldnf306.pac_',
    'cldnf307.pac_',
    'cldnf308.pac_',
    'cldnf309.pac_',
    'cl_bonus.SPD',
    'cl_bonus.SPL',
    'collection.SPD',
    'collection.SPL',
    'common.pkb',
    'common.pkh',
    'config.SPD',
    'config.SPL',
    'debfont8.pac_',
    'emblem.SPD',
    'emblem.SPL',
    'emblem_c.SPD',
    'emblem_c.SPL',
    'explain.SPD',
    'explain.SPL',
    'field.SPD',
    'field.SPL',
    'formation2.SPD',
    'formation2.SPL',
    'gmap01.SPD',
    'gmap01.SPL',
    'gmap02.SPD',
    'gmap02.SPL',
    'gmap03.SPD',
    'gmap03.SPL',
    'gmap04.SPD',
    'gmap04.SPL',
    'gmap05.SPD',
    'gmap05.SPL',
    'gmap06.SPD',
    'gmap06.SPL',
    'gmap07.SPD',
    'gmap07.SPL',
    'gmap08.SPD',
    'gmap08.SPL',
    'gmap09.SPD',
    'gmap09.SPL',
    'gmap10.SPD',
    'gmap10.SPL',
    'gmap11.SPD',
    'gmap11.SPL',
    'gmap12.SPD',
    'gmap12.SPL',
    'gmap13.SPD',
    'gmap13.SPL',
    'gmap14.SPD',
    'gmap14.SPL',
    'gmap15.SPD',
    'gmap15.SPL',
    'gmap16.SPD',
    'gmap16.SPL',
    'gmap17.SPD',
    'gmap17.SPL',
    'gmap18.SPD',
    'gmap18.SPL',
    'gmap19.SPD',
    'gmap19.SPL',
    'gmap20.SPD',
    'gmap20.SPL',
    'gmap21.SPD',
    'gmap21.SPL',
    'gmap22.SPD',
    'gmap22.SPL',
    'gmap23.SPD',
    'gmap23.SPL',
    'gmap24.SPD',
    'gmap24.SPL',
    'gmap25.SPD',
    'gmap25.SPL',
    'ih.pkb',
    'ih.pkh',
    'inabikari.SPD',
    'inabikari.SPL',
    'inabikari_e.SPD',
    'inabikari_e.SPL',
    'io.pkb',
    'io.pkh',
    'item.SPD',
    'item.SPL',
    'jinmyaku.SPD',
    'jinmyaku.SPL',
    'mbd_s.pkb',
    'mbd_s.pkh',
    'menu_equip.SPD',
    'menu_equip.SPL',
    'menu_field.SPD',
    'menu_field.SPL',
    'menu_hensei.SPD',
    'menu_hensei.SPL',
    'menu_minna.SPD',
    'menu_minna.SPL',
    'menu_MovieView.SPD',
    'menu_MovieView.SPL',
    'menu_ranking.SPD',
    'menu_ranking.SPL',
    'menu_special_comand.SPD',
    'menu_special_comand.SPL',
    'menu_tournament.SPD',
    'menu_tournament.SPL',
    'mf.pkb',
    'mf.pkh',
    'mmdn_n01.pac_',
    'movielink.SPD',
    'movielink.SPL',
    'msdn_bg00.pac_',
    'msup_bg02.pac_',
    'msup_bg03.pac_',
    'option.SPD',
    'option.SPL',
    'passCommuVs.SPD',
    'passCommuVs.SPL',
    'password.SPD',
    'password.SPL',
    'phone.SPD',
    'phone.SPL',
    'pkprepare.SPD',
    'pkprepare.SPL',
    'practice.SPD',
    'practice.SPL',
    'practice_result.SPD',
    'practice_result.SPL',
    'practice_rule.SPD',
    'practice_rule.SPL',
    'ps_item.SPD',
    'ps_item.SPL',
    'ps_list.SPD',
    'ps_list.SPL',
    'ps_replace_unit.SPD',
    'ps_replace_unit.SPL',
    'replaceunit.pkb',
    'replaceunit.pkh',
    'rmdn_a00.pac_',
    'scout.SPD',
    'scout.SPL',
    'shop.SPD',
    'shop.SPL',
    'system.SPD',
    'system.SPL',
    'title_wc.SPD',
    'title_wc.SPL',
    'tokkun_chara_select.SPD',
    'tokkun_chara_select.SPL',
    'tokkun_result.SPD',
    'tokkun_result.SPL',
    'trade.SPD',
    'trade.SPL',
    'uniform.SPD',
    'uniform.SPL',
    'VsCom.SPD',
    'VsCom.SPL',
    'waza_binder.SPD',
    'waza_binder.SPL',
    'waza_den.SPD',
    'waza_den.SPL',
    'waza_den_chara_select.SPD',
    'waza_den_chara_select.SPL',
    'wc_dl.SPD',
    'wc_dl.SPL',
    'wc_member.SPD',
    'wc_member.SPL',
    'wc_pass.SPD',
    'wc_pass.SPL',
    'wc_result.SPD',
    'wc_result.SPL',
    'wc_rule.SPD',
    'wc_rule.SPL',
    'wc_uniform.SPD',
    'wc_uniform.SPL'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach