prebuilt_files = [
    'act.pkb',
    'act.pkh',
    'blogpost.dat',
    'blogres.dat',
    'dgncrs.dat',
    'dgnmatch.dat',
    'dgntreasure.dat',
    'eve.pkb',
    'eve.pkh',
    'evet.pkb',
    'evet.pkh',
    'help.pkb',
    'help.pkh',
    'mch.pkb',
    'mch.pkh',
    'mcht.pkb',
    'mcht.pkh',
    'mr.pkb',
    'mr.pkh',
    'mrobj.pkb',
    'mrobj.pkh',
    'rpgencountf.dat',
    'treasurebox.dat'
]

foreach f : prebuilt_files
    nitrofs_files += fs.copyfile(f)
endforeach